# GitOrbit

./: .gitignore  README.md  index.html  manifest.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: .env.example  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/app/: server.go
backend/internal/config/: env_loader.go  manager.go
backend/internal/models/: models.go
backend/internal/security/: encryption.go
backend/internal/services/auth/: device_flow.go
backend/internal/services/deploy/: ftp.go  sftp.go  ssh.go
backend/internal/services/github/: client.go  source.go
backend/internal/services/sql/: executor.go  planner.go
backend/internal/storage/: instances_store.go  profiles_store.go  token_store.go
config/: profiles.json
scripts/: start-web-dev.mjs
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AuthPanel.tsx  DeploymentPanel.tsx  HomeView.tsx  Icon.tsx  InstanceManager.tsx  InstanceWizardModal.tsx  RepositoryList.tsx  SearchPanel.tsx  Sidebar.tsx
src/config/: constants.ts
src/hooks/: useInstanceDeploymentStatus.ts  useInstanceFtpVersions.ts  useLauncherData.ts
src/services/: apiClient.ts
src/types/: models.ts
src/utils/: github.ts
